--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h2 class="title">About me</h2>
             <div class = "about-content">
                 <div class = "column left">
-                    <img src="https://github.com/huysam11/More-about-me-website/blob/main/img1.jpg?raw=true" alt="">
+                    <img src="https://github.com/huysam11/More-about-me-website/blob/5a1d560e08c31c3d91a25426f935e38ed413f070/huy%20sam.jpeg?raw=true" alt="">
                 </div>
                 <div class ="column right">
                     <div class="text">Georgia State University, May 2022</div>
@@ -51,7 +51,7 @@
                     <p>I'm always a positive person, and I will make sure I take responsibility for my on going professional development </p>
                     <p>When I'm not working on coding projects, I enjoy playing videos game, listening to music, watching movies, traveling and hanging out with my friends</p>
                     <p>Check out my resume here for my experiences and skills!</p>
-                    <a href="https://drive.google.com/file/d/1-a2FA0iCEUggITHM5QEnMCflOLBNSZ0C/view?usp=sharing">My resume</a>
+                    <a href="https://docs.google.com/document/d/1mqfcw3oyLwcGuJg9tIZPJ097J1IIB0jq_xYz517FfTc/edit?usp=sharing">My resume</a>
                 </div>
             </div>
         </div>
